# VTNMPC-Autonomous-Wind-Turbine-Inspection

./: README.md  Untitled Document 1  install.sh
WTI_catkin/NMPC_code_generator/acado_ccode_generation/: CMakeLists.txt  package.xml
WTI_catkin/NMPC_code_generator/acado_ccode_generation/include/: mpc_traj.h~  mpc_trajectory.h~  nonlinear_mhe_mFxFylearning.h~  nonlinear_mpc_mFxFylearning.h~  nonlinear_mpc_pc.h~  nonlinear_mpc_pc_mLearning.h~
WTI_catkin/NMPC_code_generator/acado_ccode_generation/solver/PAMPC/: nmpc_qpoases_interface.hpp  nmpc_solver.c
WTI_catkin/NMPC_code_generator/acado_ccode_generation/solver/posaware_ratecommand_quaternion_NMPC_PC_learning/: nmpc_integrator.c  nmpc_solver.c
WTI_catkin/NMPC_code_generator/acado_ccode_generation/solver/quaternion_point_traj_ccode/: nmpc_solver.c
WTI_catkin/NMPC_code_generator/acado_ccode_generation/src/quadrotor/: PAMPC_ccode.cpp  nmpc_pc_learning_ccode.cpp  nmpc_pc_learning_posaware_ccode.cpp  nmpc_pc_quadrotor_ccode.cpp  posaware_ratecommand_nmpc_pc_learning_ccode.cpp  posaware_ratecommand_quaternion_nmpc_pc_learning_ccode.cpp  quaternion_point_traj_ccode.cpp
WTI_catkin/NMPC_code_generator/ros_acado_bridge/: CMakeLists.txt  package.xml
WTI_catkin/NMPC_code_generator/ros_acado_bridge/ACADOtoolkit/: ACADOConfig.cmake~  CMakeLists.txt  CTestTestfile.cmake~  acado.pc~  acado_env.sh~  cmake_install.cmake~
WTI_catkin/NMPC_implementations/nmpc_pc_learning/: CMakeLists.txt  package.xml
WTI_catkin/NMPC_implementations/nmpc_pc_learning/include/: nmpc_pc_learning.h  nmpc_pc_learning_main.h
WTI_catkin/NMPC_implementations/nmpc_pc_learning/launch/: nmpc_pc_learning_indoor.launch  nmpc_pc_learning_outdoor.launch
WTI_catkin/NMPC_implementations/nmpc_pc_learning/launch/airframes/: matrice_100.xml  matrice_100_gazebo (copy).xml  matrice_100_gazebo.xml  matrice_100_outdoor.xml  matrice_100_tuning.xml  matrice_300_outdoor.xml  quad_F330.xml  quad_diatone.xml  quad_martianVI.xml  tricopter_microscale.xml  tricopter_talon.xml  tricopter_white.xml
WTI_catkin/NMPC_implementations/nmpc_pc_learning/solver/: nmpc_common.h  nmpc_integrator.c  nmpc_qpoases_interface.cpp  nmpc_qpoases_interface.hpp  nmpc_solver.c
WTI_catkin/NMPC_implementations/nmpc_pc_learning/src/: nmpc_pc_learning.cpp  nmpc_pc_learning_main.cpp
WTI_catkin/NMPC_implementations/nmpc_pc_poseaware_learning/: CMakeLists.txt  package.xml
WTI_catkin/NMPC_implementations/nmpc_pc_poseaware_learning/include/: nmpc_pc_learning.h  nmpc_pc_learning_main.h
WTI_catkin/NMPC_implementations/nmpc_pc_poseaware_learning/launch/: nmpc_pc_learning_indoor.launch
WTI_catkin/NMPC_implementations/nmpc_pc_poseaware_learning/launch/airframes/: matrice_100_gazebo (copy).xml  matrice_100_gazebo.xml
WTI_catkin/NMPC_implementations/nmpc_pc_poseaware_learning/solver/: nmpc_common.h  nmpc_integrator.c  nmpc_qpoases_interface.cpp  nmpc_qpoases_interface.hpp  nmpc_solver.c
WTI_catkin/NMPC_implementations/nmpc_pc_poseaware_learning/src/: nmpc_pc_learning.cpp  nmpc_pc_learning_main.cpp
WTI_catkin/dji_m100_trajectory/: CMakeLists.txt  package.xml
WTI_catkin/dji_m100_trajectory/cfg/: set_dummyLidar.cfg  set_recdata.cfg  set_trajectory.cfg  set_trajectory_v2.cfg  set_wind_generation.cfg
WTI_catkin/dji_m100_trajectory/include/: recdata.h  trajectory.h  trajectory_v2.h
WTI_catkin/dji_m100_trajectory/launch/: m100_trajectory.launch  m100_trajectory_v2_indoor.launch  m100_trajectory_v2_outdoor.launch  recdata.launch  windgen_recdata.launch
WTI_catkin/dji_m100_trajectory/src/: GP_statemachine.cpp  dummyLidar.cpp  perception_test.cpp  point_node.cpp  recdata.cpp  rotation_node.py  trajectory.cpp  trajectory_v2.cpp  wind_generation.cpp  wind_node.py
WTI_catkin/dji_m100_trajectory/src/GP_output/: PAMPC_statemachine.cpp  hakim.txt  inspectionScenario.m  interpolatedwps.txt  mesh.txt  meshX.txt  meshY.txt  path_2500.txt  path_new_1000.txt  px_2500.txt  px_5000.txt  px_m.txt  px_new.txt  px_new_1000.txt  py_2500.txt  py_5000.txt  py_m.txt  py_new.txt  py_new_1000.txt  pz_2500.txt  pz_5000.txt  pz_m.txt  pz_new.txt  pz_new_1000.txt  rearranging.m  visualisation
WTI_catkin/dji_m100_trajectory/src/Interpolation/: Path.txt  hakim.txt  inter.txt  inter_path.py  interpolatedwps.txt  interpolation.py  pasaa_new.txt  path_new_1000.txt  py.txt  pz.txt  pz_new_1000.txt  pzz_new_1000.txt  readvalues.py  untitled0.py  untitled1.py
WTI_catkin/dji_m100_trajectory/src/RVIZ/: path_desired.py  path_vis.py
WTI_catkin/dji_m100_trajectory/src/archive/: Windnode.py  hakim_example.py  hakim_example2.py  move_robot.py  pose_monitor.py  random_values (another copy).py  wind_generation_hakim.cpp  wind_model_cpp.cpp
WTI_catkin/dji_m100_trajectory/src/matlab_plots/: inspectionPathVisualization.m  inspectionScenario.m  interpolation.m  px_s.txt  py.txt  pz_s_162.txt  vx_s.txt  vy_s.txt  vz_s.txt
WTI_catkin/dji_m100_trajectory/src/matlab_plots/Generating_normals/: MeshX.txt  MeshY.txt  v.txt  (+35 more)
WTI_catkin/dji_m100_trajectory/src/perception_test/: M.txt  generate_points.m  nx.txt  ny.txt  plot_results.m  px.txt  py.txt
WTI_catkin/dji_m100_trajectory/src/py_wake/: __init__.py
WTI_catkin/dji_m100_trajectory/src/py_wake.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
WTI_catkin/mocap/: CMakeLists.txt  package.xml
WTI_catkin/mocap/include/mocap/: mocap_gazebo.h
WTI_catkin/mocap/launch/: mocap_bridge_gazebo.launch
WTI_catkin/mocap/src/: mocap_bridge_gazebo.cpp
WTI_catkin/wind_estimator/gp_regression/: CMakeLists.txt  package.xml
WTI_catkin/wind_estimator/gp_regression/data/: plot_txt.m
WTI_catkin/wind_estimator/gp_regression/include/: gp_disturb_main.h  gp_disturb_reg.h
WTI_catkin/wind_estimator/gp_regression/launch/: gp_disturb_main_combined.launch  gp_disturb_main_x.launch  gp_disturb_main_y.launch  gp_disturb_main_z.launch
WTI_catkin/wind_estimator/gp_regression/src/: gp_disturb_main.cc  gp_disturb_main_y.cc  gp_disturb_reg.cc
WTI_catkin/wind_estimator/ros_libgp_bridge/: CMakeLists.txt  package.xml
WTI_catkin/wind_estimator/ros_libgp_bridge/libgp/: CMakeLists.txt  Sources.cmake
(+499 files in other folders)
