<?xml version="1.0"?>
<package format="2">
  <name>mocap</name>
  <version>1.0.0</version>
  <description>The mocap package</description>

  <maintainer email="mohit005@e.ntu.edu.sg">Mohit Mehndiratta</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_msgs</depend>
  
</package>
