<?xml version="1.0"?>
<package>
  <name>acado_ccode_generation</name>
  <version>1.0.0</version>
  <description>The acado_ccode_generation package</description>

  <maintainer email="mohit005@e.ntu.edu.sg">Mohit Mehndiratta</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <run_depend>roslib</run_depend>
  <build_depend>roslib</build_depend>

  <run_depend>ros_acado_bridge</run_depend>
  <build_depend>ros_acado_bridge</build_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
