<?xml version="1.0"?>
<package>
  <name>ros_acado_bridge</name>
  <version>0.0.0</version>
  <description>IMN ROS ACADO BRIDGE</description>
  <maintainer email="i.stasewitsch@tu-bs.de">Ilja Stasewitsch</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

</package>
