<?xml version="1.0"?>
<package>
  <name>nmpc_pc_learning</name>
  <version>1.0.0</version>
  <description>The nmpc_pc_learning package</description>

  <maintainer email="mohit005@e.ntu.edu.sg">Mohit Mehndiratta</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>tf</run_depend>
  <build_depend>tf</build_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <run_depend>roslib</run_depend>
  <build_depend>roslib</build_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <run_depend>geometry_msgs</run_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>mavros_msgs</run_depend>
  <build_depend>mavros_msgs</build_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
