<?xml version="1.0"?>
<package>
  <name>ros_libgp_bridge</name>
  <version>0.0.0</version>
  <description>IMN ROS libgp BRIDGE</description>
  <maintainer email="mohit005@e.ntu.edu.sg">Mohit Mehndiratta</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

</package>
